syntax = "proto3";
package pbrpc;
option go_package = "/";

message RpcMeta {
  optional Request request = 1;
  optional Response response = 2;
  optional int32 compress_type = 3;
  optional int64 correlation_id = 4;
  optional int32 attachment_size = 5;
  optional ChunkInfo chunk_info = 6;
  optional bytes authentication_data = 7;
}

message Request {
  string service_name = 1;
  string method_name = 2;
  string trace_id = 3;
}

message Response {
  optional int32 error_code = 1;
  optional string error_msg = 2;
}

message ChunkInfo {
  int64 stream_id = 1;
  int64 chunk_id = 2;
}
